# bazel-grpc-demo

./: .gitignore  BUILD.bazel  WORKSPACE  readme.md
src/main/go/: go.mod  go.sum
src/main/go/helloword/client/: BUILD.bazel  client.go
src/main/go/helloword/server/: BUILD.bazel  server.go
src/main/java/io/seven4x/example/helloworld/: HelloWorldClient.java  HelloWorldServer.java
src/main/proto/: helloworld.proto
