load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "lib",
    srcs = ["server.go"],
    importpath = "server-lib",
    visibility = ["//visibility:private"],
    deps = [
        "//:hello_go_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":lib"],
    visibility = ["//visibility:public"],
)
